# ald-t9-number-finder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: phones.csv
src/: CContact.cpp  CContact.h  CContactManager.cpp  CContactManager.h
src/data_structures/: CSuffixNode.cpp  CSuffixNode.h  CSuffixTree.cpp  CSuffixTree.h
src/exception/: FileNotFoundException.cpp  FileNotFoundException.h  UnknownFileTypeException.cpp  UnknownFileTypeException.h
src/loaders/: CCSVLoader.cpp  CCSVLoader.h  CPhoneLoader.cpp  CPhoneLoader.h  CPhoneLoaderFactory.cpp  CPhoneLoaderFactory.h
src/user_interface/: CUserInterface.cpp  CUserInterface.h
tests/: suffix_tree_tester.cpp
